--- a/package.json
+++ b/package.json
@@ -2,26 +2,42 @@
   "name": "TaskSync",
   "private": true,
   "version": "0.0.0",
-  "description": "a Sails application",
+  "description": "TaskSync",
   "keywords": [],
   "dependencies": {
     "sails": "~0.10.5",
     "sails-disk": "~0.10.0",
     "rc": "~0.5.0",
     "include-all": "~0.1.3",
+    "coffee-script": "^1.8.0",
+    "dotenv": "^0.4.0",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-sync": "~0.0.4",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-sails-linker": "~0.9.5",
     "grunt-contrib-jst": "~0.6.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-jst": "~0.6.0",
     "grunt-contrib-less": "0.11.1",
-    "grunt-contrib-coffee": "~0.10.1"
+    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-sails-linker": "~0.9.5",
+    "grunt-sync": "~0.0.4",
+    "include-all": "~0.1.3",
+    "jade": "^1.7.0",
+    "rc": "~0.5.0",
+    "request": "^2.44.0",
+    "sails": "~0.10.5",
+    "sails-disk": "~0.10.0",
+    "winston": "^0.8.0"
   },
   "scripts": {
     "start": "node app.js",
