--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "jade": "^1.7.0",
+    "node-trello": "^1.0.0",
     "rc": "~0.5.0",
     "request": "^2.44.0",
     "sails": "~0.10.5",
