--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
+    "icalendar": "^0.7.1",
     "include-all": "~0.1.3",
     "jade": "^1.7.0",
     "node-trello": "^1.0.0",
