--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "description": "TaskSync",
+  "engines": {
+    "node": "0.10.32"
+  },
   "keywords": [],
   "dependencies": {
     "sails": "~0.10.5",
