--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 WL_USERNAME=your@wunderlist.email
 WL_PASSWORD=your_password
+
+USERNAME=''
+ENCRYPTED_PASSWORD=''
+APP_KEY=''
+
 LOG_LEVEL=warn
 LOG_FILE_PATH=''
 LOG_EXT_INFO=''
