--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "icalendar": "^0.7.1",
     "include-all": "~0.1.3",
     "jade": "^1.7.0",
+    "newrelic": "^1.11.4",
     "node-trello": "^1.0.0",
     "rc": "~0.5.0",
     "request": "^2.44.0",
